--- a/package.json
+++ b/package.json
@@ -20,6 +20,13 @@
     },
     "homepage": "https://github.com/gladwindos/surfApp#readme",
     "dependencies": {
+        "axios": "^0.19.2",
+        "config": "^3.3.1",
+        "express": "^4.17.1",
+        "mongoose": "^5.9.13",
+        "request": "^2.88.2"
+    },
+    "devDependencies": {
         "concurrently": "^5.2.0",
         "nodemon": "^2.0.3"
     }
